refact: melhorar estrutura do `TestConfig` e aplicar princípios de clean code